Z-index issue fixed

--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -3,7 +3,7 @@
     width: 100%;
 	background-color: $color-1;
     border-bottom: 1px solid $color-9;
-    z-index: 10;
+    z-index: 5;
 }
 
 .no-header-border #site-header {
