--- a/sass/components/topbar/_topbar.scss
+++ b/sass/components/topbar/_topbar.scss
@@ -3,7 +3,7 @@
 	background-color: #fff;
 	font-size: 12px;
 	border-bottom: 1px solid $color-9;
-	z-index: 10;
+	z-index: 11;
 }
 
 #top-bar {
